actin related proteins : formins

--- a/library.bib
+++ b/library.bib
@@ -124,6 +124,22 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2009},
 }
 
+@article{Bornschlogl2013,
+ abstract = {In recent years, the dynamic, hair-like cell protrusions called filopodia have attracted considerable attention. They have been found in a multitude of different cell types and are often called "sensory organelles," since they seem to sense the mechanical and chemical environment of a cell. Once formed, filopodia can exhibit complex behavior, they can grow and retract, push or pull, and transform into distinct structures. They are often found to make first adhesive contact with the extracellular matrix, pathogens or with adjacent cells, and to subsequently exert pulling forces. Much is known about the cytoskeletal players involved in filopodia formation, but only recently have we started to explore the mechanics of filopodia together with the related cytoskeletal dynamics. This review summarizes current advancements in our understanding of the mechanics and dynamics of filopodia, with a focus on the molecular mechanisms behind filopodial force exertion.},
+ author = {Bornschl\"{o}gl, Thomas},
+ doi = {10.1002/cm.21130},
+ issn = {1949-3592},
+ journal = {Cytoskeleton (Hoboken, N.J.)},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/23959922},
+ month = {oct},
+ number = {10},
+ pages = {590--603},
+ pmid = {23959922},
+ title = {How filopodia pull: what we know about the mechanics and dynamics of filopodia.},
+ volume = {70},
+ year = {2013},
+}
+
 @article{Boudreau2013,
  abstract = {The protein 14-3-3$\sigma$ (stratifin) is frequently described as a tumor suppressor silenced in about 80\% of breast tumors. Intriguingly, we show that 14-3-3$\sigma$ expression, which in normal breast is localized to the myoepithelial cells, tracks with malignant phenotype in two models of basal-like breast cancer progression, and in patients, it is associated with basal-like subtype and poor clinical outcome. We characterized a mechanism by which 14-3-3$\sigma$ guides breast tumor invasion by integrating cytoskeletal dynamics: it stabilizes a complex of solubilized actin and intermediate filaments to maintain a pool of "bioavailable" complexes for polarized assembly during migration. We show that formation of the actin/cytokeratin/14-3-3$\sigma$ complex and cellular migration are regulated by PKC$\zeta$-dependent phosphorylation, a finding that could form the basis for intervention in aggressive breast carcinomas expressing 14-3-3$\sigma$. Our data suggest that the biology of this protein is important in cellular movement and is contingent on breast cancer subtype.},
  author = {Boudreau, Aaron and Tanner, Kandice and Wang, Daojing and Geyer, Felipe C and Reis-Filho, Jorge S and Bissell, Mina J},
@@ -352,6 +368,24 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  pmid = {16923388},
  title = {Matrix elasticity directs stem cell lineage specification.},
  volume = {126},
+ year = {2006},
+}
+
+@article{Faix2006,
+ abstract = {Filopodia are rod-like cell surface projections filled with bundles of parallel actin filaments. They are found on a variety of cell types and have been ascribed sensory or exploratory functions. Filopodium formation is frequently associated with protrusion of sheet-like actin filament arrays called lamellipodia and membrane ruffles, but, in comparison to these structures, the molecular details underpinning the initiation and maintenance of filopodia are only just beginning to emerge. Recent advances have improved our understanding of the molecular requirements for filopodium protrusion and have yielded insights into the inter-relationships between lamellipodia and filopodia, the two 'sub-compartments' of the protrusive actin cytoskeleton.},
+ author = {Faix, Jan and Rottner, Klemens},
+ doi = {10.1016/j.ceb.2005.11.002},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Faix, Rottner/Faix, Rottner - 2006 - Current opinion in cell biology - The making of filopodia.pdf:pdf},
+ issn = {0955-0674},
+ journal = {Current opinion in cell biology},
+ keyword = {Animals,Dictyostelium,Dictyostelium: metabolism,Mice,Microfilament Proteins,Microfilament Proteins: chemistry,Microfilament Proteins: metabolism,Models, Biological,Pseudopodia,Pseudopodia: chemistry,Pseudopodia: metabolism,Pseudopodia: ultrastructure,Signal Transduction},
+ link = {http://www.sciencedirect.com/science/article/pii/S095506740500178X},
+ month = {feb},
+ number = {1},
+ pages = {18--25},
+ pmid = {16337369},
+ title = {The making of filopodia.},
+ volume = {18},
  year = {2006},
 }
 
@@ -796,6 +830,23 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {1997},
 }
 
+@article{Maitre2012,
+ abstract = {Differential cell adhesion and cortex tension are thought to drive cell sorting by controlling cell-cell contact formation. Here, we show that cell adhesion and cortex tension have different mechanical functions in controlling progenitor cell-cell contact formation and sorting during zebrafish gastrulation. Cortex tension controls cell-cell contact expansion by modulating interfacial tension at the contact. By contrast, adhesion has little direct function in contact expansion, but instead is needed to mechanically couple the cortices of adhering cells at their contacts, allowing cortex tension to control contact expansion. The coupling function of adhesion is mediated by E-cadherin and limited by the mechanical anchoring of E-cadherin to the cortex. Thus, cell adhesion provides the mechanical scaffold for cell cortex tension to drive cell sorting during gastrulation.},
+ author = {Ma\^{\i}tre, Jean-L\'{e}on and Berthoumieux, H\'{e}l\`{e}ne and Krens, Simon Frederik Gabriel and Salbreux, Guillaume and J\"{u}licher, Frank and Paluch, Ewa and Heisenberg, Carl-Philipp},
+ doi = {10.1126/science.1225399},
+ issn = {1095-9203},
+ journal = {Science (New York, N.Y.)},
+ keyword = {Animals,Cadherins,Cadherins: metabolism,Cadherins: physiology,Cell Adhesion,Cell Communication,Cell Shape,Cytoskeleton,Cytoskeleton: physiology,Ectoderm,Ectoderm: cytology,Gastrulation,Stem Cells,Stem Cells: cytology,Stem Cells: physiology,Surface Tension,Zebrafish,Zebrafish: embryology},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/22923438},
+ month = {oct},
+ number = {6104},
+ pages = {253--6},
+ pmid = {22923438},
+ title = {Adhesion functions in cell sorting by mechanically coupling the cortices of adhering cells.},
+ volume = {338},
+ year = {2012},
+}
+
 @article{Maitre2012a,
  abstract = {Differential cell adhesion and cortex tension are thought to drive cell sorting by controlling cell-cell contact formation. Here, we show that cell adhesion and cortex tension have different mechanical functions in controlling progenitor cell-cell contact formation and sorting during zebrafish gastrulation. Cortex tension controls cell-cell contact expansion by modulating interfacial tension at the contact. By contrast, adhesion has little direct function in contact expansion, but instead is needed to mechanically couple the cortices of adhering cells at their contacts, allowing cortex tension to control contact expansion. The coupling function of adhesion is mediated by E-cadherin and limited by the mechanical anchoring of E-cadherin to the cortex. Thus, cell adhesion provides the mechanical scaffold for cell cortex tension to drive cell sorting during gastrulation.},
  author = {Ma\^{\i}tre, Jean-L\'{e}on and Berthoumieux, H\'{e}l\`{e}ne and Krens, Simon Frederik Gabriel and Salbreux, Guillaume and J\"{u}licher, Frank and Paluch, Ewa and Heisenberg, Carl-Philipp},
@@ -1077,6 +1128,42 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Reconstitution of an Actin Cortex Inside a Liposome},
  volume = {96},
  year = {2009},
+}
+
+@article{Pring2003a,
+ abstract = {A fragment of the yeast formin Bni1 containing the FH1FH2 domains increases the rate of filament nucleation from pure G-actin [Pruyne et al. (2002) Science 297, 612-615]. To determine the mechanism of nucleation, we compared the G-actin dependence of Bni1FH1FH2-induced polymerization with theoretical models. The data best fit a model suggesting that Bni1FH1FH2 stabilizes an actin dimer. We also show that nucleation increases with the square root of the Bni1FH1FH2 concentration. We demonstrate that this relationship is expected for any such nucleator, independent of nucleus size. The proline-rich FH1 domain binds profilin, and deletion of this domain decreases the contribution of profilin-actin to the nucleation. A role for profilin binding to the FH1 domain in filament nucleation was supported by the inability of Bni1FH1FH2 to utilize a mutant profilin, H133S profilin, with defective binding to polyproline. Bni1FH1FH2 partially inhibits barbed-end elongation, and we find that the rate constants for both polymerization and depolymerization are decreased by approximately 50\%. Bni1FH1FH2 has no effect on pointed-end kinetics or on the critical concentration. To investigate the domains of Bni1 required for these activities, the experiments were all duplicated with the FH2 domain alone. The FH2 domain is as effective as the FH1FH2 domains together in inhibiting barbed-end kinetics; it is less effective as a nucleator but the mechanism is again best fit by dimer stabilization.},
+ author = {Pring, Martin and Evangelista, Marie and Boone, Charles and Yang, Changsong and Zigmond, Sally H},
+ doi = {10.1021/bi026520j},
+ issn = {0006-2960},
+ journal = {Biochemistry},
+ keyword = {Actin Cytoskeleton,Actin Cytoskeleton: chemistry,Actin Cytoskeleton: metabolism,Actin Depolymerizing Factors,Actins,Actins: antagonists \& inhibitors,Actins: chemistry,Actins: metabolism,Amino Acid,Animals,Cell Fractionation,Contractile Proteins,Destrin,Dimerization,Microfilament Proteins,Microfilament Proteins: chemistry,Microfilament Proteins: genetics,Microfilament Proteins: metabolism,Polymers,Polymers: chemistry,Polymers: metabolism,Profilins,Protein Binding,Protein Binding: genetics,Protein Structure,Rabbits,Saccharomyces cerevisiae Proteins,Saccharomyces cerevisiae Proteins: chemistry,Saccharomyces cerevisiae Proteins: genetics,Saccharomyces cerevisiae Proteins: metabolism,Sequence Homology,Subcellular Fractions,Subcellular Fractions: chemistry,Subcellular Fractions: metabolism,Tertiary,Tertiary: genetics},
+ link = {http://dx.doi.org/10.1021/bi026520j},
+ month = {jan},
+ number = {2},
+ pages = {486--96},
+ pmid = {12525176},
+ publisher = {American Chemical Society},
+ title = {Mechanism of formin-induced nucleation of actin filaments.},
+ volume = {42},
+ year = {2003},
+}
+
+@article{Pruyne2002,
+ abstract = {Nucleation of branched actin filaments by the Arp2/3 complex is a conserved process in eukaryotic cells, yet the source of unbranched actin filaments has remained obscure. In yeast, formins stimulate assembly of actin cables independently of Arp2/3. Here, the conserved core of formin homology domains 1 and 2 of Bni1p (Bni1pFH1FH2) was found to nucleate unbranched actin filaments in vitro. Bni1pFH2 provided the minimal region sufficient for nucleation. Unique among actin nucleators, Bni1pFH1FH2 remained associated with the growing barbed ends of filaments. This combination of properties suggests a direct role for formins in regulating nucleation and polarization of unbranched filamentous actin structures.},
+ author = {Pruyne, David and Evangelista, Marie and Yang, Changsong and Bi, Erfei and Zigmond, Sally and Bretscher, Anthony and Boone, Charles},
+ doi = {10.1126/science.1072309},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Pruyne et al/Pruyne et al. - 2002 - Science (New York, N.Y.) - Role of formins in actin assembly nucleation and barbed-end association.pdf:pdf},
+ issn = {1095-9203},
+ journal = {Science (New York, N.Y.)},
+ keyword = {Actin Cytoskeleton,Actin Cytoskeleton: metabolism,Actin Cytoskeleton: ultrastructure,Actins,Actins: metabolism,Cytochalasin B,Cytochalasin B: pharmacology,Electron,Fungal Proteins,Fungal Proteins: chemistry,Fungal Proteins: metabolism,Microfilament Proteins,Microscopy,Protein Structure,Recombinant Fusion Proteins,Recombinant Fusion Proteins: chemistry,Recombinant Fusion Proteins: metabolism,Saccharomyces cerevisiae,Saccharomyces cerevisiae Proteins,Saccharomyces cerevisiae Proteins: chemistry,Saccharomyces cerevisiae Proteins: metabolism,Saccharomyces cerevisiae: metabolism,Saccharomyces cerevisiae: ultrastructure,Tertiary},
+ link = {http://www.sciencemag.org/content/297/5581/612.abstract},
+ month = {jul},
+ number = {5581},
+ pages = {612--5},
+ pmid = {12052901},
+ title = {Role of formins in actin assembly: nucleation and barbed-end association.},
+ volume = {297},
+ year = {2002},
 }
 
 @article{Pujol2012,
