Capping and crosslinks

--- a/library.bib
+++ b/library.bib
@@ -884,6 +884,21 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2012},
 }
 
+@article{McCullough2011,
+ abstract = {The actin regulatory protein, cofilin, increases the bending and twisting elasticity of actin filaments and severs them. It has been proposed that filaments partially decorated with cofilin accumulate stress from thermally driven shape fluctuations at bare (stiff) and decorated (compliant) boundaries, thereby promoting severing. This mechanics-based severing model predicts that changes in actin filament compliance due to cofilin binding affect severing activity. Here, we test this prediction by evaluating how the severing activities of vertebrate and yeast cofilactin scale with the flexural rigidities determined from analysis of shape fluctuations. Yeast actin filaments are more compliant in bending than vertebrate actin filaments. Severing activities of cofilactin isoforms correlate with changes in filament flexibility. Vertebrate cofilin binds but does not increase the yeast actin filament flexibility, and does not sever them. Imaging of filament thermal fluctuations reveals that severing events are associated with local bending and fragmentation when deformations attain a critical angle. The critical severing angle at boundaries between bare and cofilin-decorated segments is smaller than in bare or fully decorated filaments. These measurements support a cofilin-severing mechanism in which mechanical asymmetry promotes local stress accumulation and fragmentation at boundaries of bare and cofilin-decorated segments, analogous to failure of some nonprotein materials. ?? 2011 Biophysical Society.},
+ author = {McCullough, Brannon R. and Grintsevich, Elena E. and Chen, Christine K. and Kang, Hyeran and Hutchison, Alan L. and Henn, Arnon and Cao, Wenxiang and Suarez, Cristian and Martiel, Jean Louis and Blanchoin, Laurent and Reisler, Emil and {De La Cruz}, Enrique M.},
+ doi = {10.1016/j.bpj.2011.05.049},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/McCullough et al/McCullough et al. - 2011 - Biophysical Journal - Cofilin-linked changes in actin filament flexibility promote severing.pdf:pdf},
+ isbn = {1542-0086 (Electronic)$\backslash$n0006-3495 (Linking)},
+ issn = {00063495},
+ journal = {Biophysical Journal},
+ pages = {151--159},
+ pmid = {21723825},
+ title = {Cofilin-linked changes in actin filament flexibility promote severing},
+ volume = {101},
+ year = {2011},
+}
+
 @article{Morone2006b,
  abstract = {Three-dimensional images of the undercoat structure on the cytoplasmic surface of the upper cell membrane of normal rat kidney fibroblast (NRK) cells and fetal rat skin keratinocytes were reconstructed by electron tomography, with 0.85-nm-thick consecutive sections made approximately 100 nm from the cytoplasmic surface using rapidly frozen, deeply etched, platinum-replicated plasma membranes. The membrane skeleton (MSK) primarily consists of actin filaments and associated proteins. The MSK covers the entire cytoplasmic surface and is closely linked to clathrin-coated pits and caveolae. The actin filaments that are closely apposed to the cytoplasmic surface of the plasma membrane (within 10.2 nm) are likely to form the boundaries of the membrane compartments responsible for the temporary confinement of membrane molecules, thus partitioning the plasma membrane with regard to their lateral diffusion. The distribution of the MSK mesh size as determined by electron tomography and that of the compartment size as determined from high speed single-particle tracking of phospholipid diffusion agree well in both cell types, supporting the MSK fence and MSK-anchored protein picket models.},
  author = {Morone, Nobuhiro and Fujiwara, Takahiro and Murase, Kotono and Kasai, Rinshi S and Ike, Hiroshi and Yuasa, Shigeki and Usukura, Jiro and Kusumi, Akihiro},
@@ -1201,6 +1216,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Searching for a function for nuclear actin.},
  volume = {10},
  year = {2000},
+}
+
+@article{Reymann2012,
+ abstract = {The organization of actin filaments into higher-ordered structures governs eukaryotic cell shape and movement. Global actin network size and architecture are maintained in a dynamic steady state through regulated assembly and disassembly. Here, we used experimentally defined actin structures in vitro to investigate how the activity of myosin motors depends on network architecture. Direct visualization of filaments revealed myosin-induced actin network deformation. During this reorganization, myosins selectively contracted and disassembled antiparallel actin structures, while parallel actin bundles remained unaffected. The local distribution of nucleation sites and the resulting orientation of actin filaments appeared to regulate the scalability of the contraction process. This "orientation selection" mechanism for selective contraction and disassembly suggests how the dynamics of the cellular actin cytoskeleton can be spatially controlled by actomyosin contractility.},
+ author = {Reymann, Anne-C\'{e}cile and Boujemaa-Paterski, Rajaa and Martiel, Jean-Louis and Gu\'{e}rin, Christophe and Cao, Wenxiang and Chin, Harvey F. and {De La Cruz}, Enrique M. and Th\'{e}ry, Manuel and Blanchoin, Laurent},
+ doi = {10.1126/science.1221708},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Reymann et al/Reymann et al. - 2012 - Science (New York, N.Y.) - Actin network architecture can determine myosin motor activity.pdf:pdf},
+ isbn = {1095-9203 (Electronic)$\backslash$r0036-8075 (Linking)},
+ issn = {1095-9203},
+ journal = {Science (New York, N.Y.)},
+ keyword = {Actin Cytoskeleton,Actin Cytoskeleton: metabolism,Actin Cytoskeleton: ultrastructure,Actins,Actins: chemistry,Actins: metabolism,Actomyosin,Actomyosin: chemistry,Actomyosin: metabolism,Animals,Myosin Heavy Chains,Myosin Heavy Chains: chemistry,Myosin Heavy Chains: metabolism,Myosin Type II,Myosin Type II: chemistry,Myosin Type II: metabolism,Rabbits,Swine},
+ link = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3649007\&tool=pmcentrez\&rendertype=abstract},
+ month = {jun},
+ number = {6086},
+ pages = {1310--4},
+ pmid = {22679097},
+ title = {Actin network architecture can determine myosin motor activity.},
+ volume = {336},
+ year = {2012},
 }
 
 @article{Saha2008,
