le lundi c est myosine

--- a/library.bib
+++ b/library.bib
@@ -631,6 +631,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2013},
 }
 
+@article{Inoue2002,
+ abstract = {Myosin is an actin-based molecular motor that constitutes a diverse superfamily. In contrast to conventional myosin, which binds to actin for only a short time during cross-bridge cycling, recent studies have demonstrated that class V myosin moves along actin filaments for a long distance without dissociating. This would make it suitable for supporting cargo movement in cells. Because myosin V has a two-headed structure with an expanded neck domain, it has been postulated to 'walk' along the 36-nm helical repeat of the actin filament, with one head attached to the actin and leading the other head to the neighbouring helical pitch. Here, we report that myosin IXb, a single-headed myosin, moves processively on actin filaments. Furthermore, we found that myosin IXb is a minus-end-directed motor. In addition to class VI myosin, this is the first myosin superfamily member identified that moves in the reverse direction. The processive movement of the single-headed myosin IXb cannot be explained by a 'hand-over-hand' mechanism. This suggests that an alternative mechanism must be operating for the processive movement of single-headed myosin IXb.},
+ author = {Inoue, Akira and Saito, Junya and Ikebe, Reiko and Ikebe, Mitsuo},
+ doi = {10.1038/ncb774},
+ issn = {1465-7392},
+ journal = {Nature cell biology},
+ keyword = {Actins,Actins: metabolism,Animals,Baculoviridae,Baculoviridae: metabolism,Cell Line,DNA, Complementary,DNA, Complementary: metabolism,Electrophoresis, Polyacrylamide Gel,Genetic Vectors,Insects,Microscopy, Fluorescence,Myosins,Myosins: chemistry,Myosins: metabolism,Myosins: physiology,Plasmids,Plasmids: metabolism,Protein Binding,Protein Structure, Tertiary,Recombinant Proteins,Recombinant Proteins: metabolism,Xenopus laevis},
+ link = {http://dx.doi.org/10.1038/ncb774},
+ month = {apr},
+ number = {4},
+ pages = {302--6},
+ pmid = {11901422},
+ publisher = {Nature Publishing Group},
+ shorttitle = {Nat Cell Biol},
+ title = {Myosin IXb is a single-headed minus-end-directed processive motor.},
+ volume = {4},
+ year = {2002},
+}
+
 @article{Iwabuchi2010,
  abstract = {The plant organelles, chloroplast and nucleus, change their position in response to light. In Arabidopsis thaliana leaf cells, chloroplasts and nuclei are distributed along the inner periclinal wall in darkness. In strong blue light, they become positioned along the anticlinal wall, while in weak blue light, only chloroplasts are accumulated along the inner and outer periclinal walls. Blue-light dependent positioning of both organelles is mediated by the blue-light receptor phototropin and controlled by the actin cytoskeleton. Interestingly, however, it seems that chloroplast movement requires short, fine actin filaments organized at the chloroplast edge, whereas nuclear movement does cytoplasmic, thick actin bundles intimately associated with the nucleus. Although there are many similarities between photo-relocation movements of chloroplasts and nuclei, plant cells appear to have evolved distinct mechanisms to regulate actin organization required for driving the movements of these organelles.},
  author = {Iwabuchi, Kosei and Takagi, Shingo},
@@ -899,6 +918,24 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2011},
 }
 
+@article{Mitrossilis2010,
+ abstract = {Living cells adapt to the stiffness of their environment. However, cell response to stiffness is mainly thought to be initiated by the deformation of adhesion complexes under applied force. In order to determine whether cell response was triggered by stiffness or force, we have developed a unique method allowing us to tune, in real time, the effective stiffness experienced by a single living cell in a uniaxial traction geometry. In these conditions, the rate of traction force buildup dF/dt was adapted to stiffness in less than 0.1 s. This integrated fast response was unambiguously triggered by stiffness, and not by force. It suggests that early cell response could be mechanical in nature. In fact, local force-dependent signaling through adhesion complexes could be triggered and coordinated by the instantaneous cell-scale adaptation of dF/dt to stiffness. Remarkably, the effective stiffness method presented here can be implemented on any mechanical setup. Thus, beyond single-cell mechanosensing, this method should be useful to determine the role of rigidity in many fundamental phenomena such as morphogenesis and development.},
+ author = {Mitrossilis, D\'{e}mosth\`{e}ne and Fouchard, Jonathan and Pereira, David and Postic, Fran\c{c}ois and Richert, Alain and Saint-Jean, Michel and Asnacios, Atef},
+ doi = {10.1073/pnas.1007940107},
+ isbn = {1007940107},
+ issn = {1091-6490},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ keyword = {Animals,Biophysical Phenomena,Cell Adhesion,Cell Adhesion: physiology,Cell Line,Cellular,Cellular: physiology,Elasticity,Elasticity: physiology,Extracellular Matrix,Extracellular Matrix: physiology,Fibronectins,Fibronectins: physiology,Mechanical,Mechanotransduction,Mice,Muscle Fibers,Signal Transduction,Signal Transduction: physiology,Skeletal,Skeletal: physiology,Static Electricity,Stress},
+ link = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2944728\&tool=pmcentrez\&rendertype=abstract},
+ month = {sep},
+ number = {38},
+ pages = {16518--23},
+ pmid = {20823257},
+ title = {Real-time single-cell response to stiffness.},
+ volume = {107},
+ year = {2010},
+}
+
 @article{Morone2006b,
  abstract = {Three-dimensional images of the undercoat structure on the cytoplasmic surface of the upper cell membrane of normal rat kidney fibroblast (NRK) cells and fetal rat skin keratinocytes were reconstructed by electron tomography, with 0.85-nm-thick consecutive sections made approximately 100 nm from the cytoplasmic surface using rapidly frozen, deeply etched, platinum-replicated plasma membranes. The membrane skeleton (MSK) primarily consists of actin filaments and associated proteins. The MSK covers the entire cytoplasmic surface and is closely linked to clathrin-coated pits and caveolae. The actin filaments that are closely apposed to the cytoplasmic surface of the plasma membrane (within 10.2 nm) are likely to form the boundaries of the membrane compartments responsible for the temporary confinement of membrane molecules, thus partitioning the plasma membrane with regard to their lateral diffusion. The distribution of the MSK mesh size as determined by electron tomography and that of the compartment size as determined from high speed single-particle tracking of phospholipid diffusion agree well in both cell types, supporting the MSK fence and MSK-anchored protein picket models.},
  author = {Morone, Nobuhiro and Fujiwara, Takahiro and Murase, Kotono and Kasai, Rinshi S and Ike, Hiroshi and Yuasa, Shigeki and Usukura, Jiro and Kusumi, Akihiro},
@@ -1151,7 +1188,7 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  doi = {10.1021/bi026520j},
  issn = {0006-2960},
  journal = {Biochemistry},
- keyword = {Actin Cytoskeleton,Actin Cytoskeleton: chemistry,Actin Cytoskeleton: metabolism,Actin Depolymerizing Factors,Actins,Actins: antagonists \& inhibitors,Actins: chemistry,Actins: metabolism,Amino Acid,Animals,Cell Fractionation,Contractile Proteins,Destrin,Dimerization,Microfilament Proteins,Microfilament Proteins: chemistry,Microfilament Proteins: genetics,Microfilament Proteins: metabolism,Polymers,Polymers: chemistry,Polymers: metabolism,Profilins,Protein Binding,Protein Binding: genetics,Protein Structure,Rabbits,Saccharomyces cerevisiae Proteins,Saccharomyces cerevisiae Proteins: chemistry,Saccharomyces cerevisiae Proteins: genetics,Saccharomyces cerevisiae Proteins: metabolism,Sequence Homology,Subcellular Fractions,Subcellular Fractions: chemistry,Subcellular Fractions: metabolism,Tertiary,Tertiary: genetics},
+ keyword = {Actin Cytoskeleton,Actin Cytoskeleton: chemistry,Actin Cytoskeleton: metabolism,Actin Depolymerizing Factors,Actins,Actins: antagonists \& inhibitors,Actins: chemistry,Actins: metabolism,Amino Acid,Animals,Cell Fractionation,Contractile Proteins,Destrin,Dimerization,Microfilament Proteins,Microfilament Proteins: chemistry,Microfilament Proteins: genetics,Microfilament Proteins: metabolism,Polymers,Polymers: chemistry,Polymers: metabolism,Profilins,Protein Binding,Protein Binding: genetics,Protein Structure, Tertiary,Protein Structure, Tertiary: genetics,Rabbits,Saccharomyces cerevisiae Proteins,Saccharomyces cerevisiae Proteins: chemistry,Saccharomyces cerevisiae Proteins: genetics,Saccharomyces cerevisiae Proteins: metabolism,Sequence Homology, Amino Acid,Subcellular Fractions,Subcellular Fractions: chemistry,Subcellular Fractions: metabolism,Tertiary,Tertiary: genetics},
  link = {http://dx.doi.org/10.1021/bi026520j},
  month = {jan},
  number = {2},
