mardin matin, myosin

--- a/library.bib
+++ b/library.bib
@@ -87,6 +87,31 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2005},
 }
 
+@article{Berridge2012,
+ abstract = {This major contribution to the field of cell signalling by one of the world's leading experts, Professor Sir Michael Berridge (Cambridge) is now sponsored by the Biochemical Journal's Signal Knowledge Environment ensuring online access is freely available to all. Cell Signalling Biology provides researchers, teachers and students alike with an outstanding online resource describing the biology of cell signalling.},
+ author = {Berridge, Michael J.},
+ doi = {10.1042/csb0001002},
+ issn = {0264-6021},
+ journal = {Biochemical Journal},
+ link = {http://www.biochemj.org/csb/002/},
+ month = {apr},
+ pages = {1--130},
+ title = {Cell Signalling Biology: Module 2 - Cell signalling pathways},
+ volume = {Module 2},
+ year = {2012},
+}
+
+@misc{Berridge2012a,
+ abstract = {Signalling pathways regulate cellular processes by acting through sensors to stimulate the downstream effectors that are responsible for controlling different cellular processes. In some cases, these effectors might be relatively simple, consisting of a single downstream effector system, whereas there are more complicated effectors made up of multiple components such as those driving processes such as membrane and protein trafficking , endocytosis , exocytosis , phagocytosis , motor proteins , gene transcription , gene silencing and actin remodelling .},
+ author = {Berridge, Michael J.},
+ booktitle = {Biochemical Journal},
+ doi = {10.1042/csb0001004},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Berridge/Berridge - 2012 - Biochemical Journal - Cell Signalling Biology Module 4 - Sensors and Effectors.pdf:pdf},
+ issn = {0264-6021},
+ title = {Cell Signalling Biology: Module 4 - Sensors and Effectors},
+ year = {2012},
+}
+
 @article{Betz2009,
  abstract = {Neuronal growth is an extremely complex yet reliable process that is directed by a dynamic lamellipodial structure at the tip of every growing neurite, called the growth cone. Lamellipodial edge fluctuations are controlled by the interplay between actin polymerization pushing the edge forward and molecular motor driven retrograde actin flow retracting the actin network. The leading edge switches randomly between extension and retraction processes. We identify switching of “on/off” states in actin polymerization as the main determinant of lamellipodial advancement. Our analysis of motility statistics allows for a prediction of growth direction. This was used in simulations explaining the amazing signal detection capabilities of neuronal growth by the experimentally found biased stochastic processes. Our measurements show that the intensity of stochastic fluctuations depend on changes in the underlying active intracellular processes and we find a power law $\eta$ = a∗x$\alpha$ with exponent $\alpha$ = 2.63 ± 0.12 between noise intensity $\eta$ and growth cone activity x, defined as the sum of protrusion and retraction velocity. Differences in the lamellipodial dynamics between primary neurons and a neuronal cell line further suggests that active processes tune the observed stochastic fluctuations. This hints at a possible role of noise intensity in determining signal detection sensitivity.},
  author = {Betz, Timo and Koch, Daniel and Lim, Daryl and K\"{a}s, Josef A.},
@@ -510,6 +535,20 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Actin filament cables in Drosophila nurse cells are composed of modules that slide passively past one another during dumping.},
  volume = {138},
  year = {1997},
+}
+
+@article{Hartman2012,
+ author = {Hartman, M. A. and Spudich, J. A.},
+ doi = {10.1242/jcs.094300},
+ issn = {0021-9533},
+ journal = {Journal of Cell Science},
+ link = {http://jcs.biologists.org/content/125/7/1627.full},
+ month = {may},
+ number = {7},
+ pages = {1627--1632},
+ title = {The myosin superfamily at a glance},
+ volume = {125},
+ year = {2012},
 }
 
 @article{Hayden2013,
