--- a/library.bib
+++ b/library.bib
@@ -196,6 +196,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2013},
 }
 
+@article{Buss2008,
+ abstract = {This review, dedicated to the memory of Professor Setsuro Ebashi, focuses on our current work investigating the cellular functions and regulation of the unique unconventional motor, myosin VI. This myosin, unlike all the other myosins so far studied, moves towards the minus end of actin filaments and has been implicated in a wide range of cellular processes such as endocytosis, exocytosis, cell migration, cell division and cytokinesis. Myosin VI's involvement in these cellular pathways is mediated by its interaction with specific adaptor proteins and is regulated by multiple regulatory signals and modifications such as calcium ions, PtdIns(4,5)P(2) (PIP(2)) and phosphorylation. Understanding the functions of myosin VI within the cell and how it is regulated is now of utmost importance given the recent observations that it is associated with a number of human disorders such as deafness and cancers.},
+ author = {Buss, Folma and Kendrick-Jones, John},
+ doi = {10.1016/j.bbrc.2007.11.150},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Buss, Kendrick-Jones/Buss, Kendrick-Jones - 2008 - Biochemical and biophysical research communications - How are the cellular functions of myosin VI regulate.pdf:pdf},
+ isbn = {1090-2104 (Electronic)},
+ issn = {1090-2104},
+ journal = {Biochemical and biophysical research communications},
+ keyword = {5)P2,Actin,Biological,Cell Physiological Phenomena,Cytoskeleton,Dab2,Feedback,Feedback: physiology,GIPC,Membrane trafficking,Models,Molecular Motor Proteins,Molecular Motor Proteins: physiology,Motor proteins,Myosin Heavy Chains,Myosin Heavy Chains: physiology,Myosin VI,Myosin phosphorylation,Optineurin,Protein Transport,Protein Transport: physiology,PtdIns(4},
+ link = {http://www.sciencedirect.com/science/article/pii/S0006291X07025508},
+ month = {apr},
+ number = {1},
+ pages = {165--175},
+ pmid = {18068125},
+ title = {How are the cellular functions of myosin VI regulated within the cell?},
+ volume = {369},
+ year = {2008},
+}
+
 @article{Cameron2001,
  abstract = {Polymerization of actin filaments is necessary for both protrusion of the leading edge of crawling cells and propulsion of certain intracellular pathogens, and it is sufficient for generating force for bacterial motility in vitro. Motile intracellular pathogens are associated with actin-rich comet tails containing many of the same molecular components present in lamellipodia, and this suggests that these two systems use a similar mechanism for motility. However, available structural evidence suggests that the organization of comet tails differs from that of lamellipodia. Actin filaments in lamellipodia form branched arrays, which are thought to arise by dendritic nucleation mediated by the Arp2/3 complex. In contrast, comet tails have been variously described as consisting of short, randomly oriented filaments, with a higher degree of alignment at the periphery, or as containing long, straight axial filaments with a small number of oblique filaments. Because the assembly of pathogen-associated comet tails has been used as a model system for lamellipodial protrusion, it is important to resolve this apparent discrepancy. Here, using a platinum replica approach, we show that actin filament arrays in comet tails in fact have a dendritic organization with the Arp2/3 complex localizing to Y-junctions as in lamellipodia. Thus, comet tails and lamellipodia appear to share a common dendritic nucleation mechanism for protrusive motility. However, comet tails differ from lamellipodia in that their actin filaments are usually twisted and appear to be under significant torsional stress.},
  author = {Cameron, Lisa A. and Svitkina, Tatyana M. and Vignjevic, Danijela and Theriot, Julie A. and Borisy, Gary G.},
@@ -542,7 +561,7 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  doi = {10.1242/jcs.094300},
  issn = {0021-9533},
  journal = {Journal of Cell Science},
- link = {http://jcs.biologists.org/content/125/7/1627.full},
+ link = {http://jcs.biologists.org/content/125/7/1627.full http://jcs.biologists.org/cgi/doi/10.1242/jcs.094300},
  month = {may},
  number = {7},
  pages = {1627--1632},
